add kafka publisher and worker
- add code for kafka publisher
- add kafka worker and runner using virtual threads
- add 2 profiles to pom.xml to build helidon and worker jars